ev-window: Unescape the output basename for print to file

https://bugzilla.gnome.org/show_bug.cgi?id=705848